perfil empleado, reportes en Excel y PDF, añadir ubicación